[gd_scene load_steps=9 format=3 uid="uid://cnp0e333n32uq"]

[ext_resource type="Script" path="res://adventur of timtim/shop.gd" id="1_dj2th"]
[ext_resource type="Texture2D" uid="uid://cngwyx6dvnepc" path="res://gm assets/Foozle_2DE0001_Pixel_Magic_Effects/Pixel_Magic_Effects_Animations.png" id="2_3v13a"]
[ext_resource type="Texture2D" uid="uid://dd7lcgnbcx3er" path="res://adventur of timtim/Bow Pack.png" id="3_6ae17"]
[ext_resource type="Texture2D" uid="uid://ce2a4ck468i4r" path="res://adventur of timtim/Foozle_2DE0001_Pixel_Magic_Effects/Pixel_Magic_Effects_Animations.png" id="4_00j1l"]

[sub_resource type="Animation" id="Animation_vxdxl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -250)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -605.105)]
}

[sub_resource type="Animation" id="Animation_nq5wa"]
resource_name = "transin"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -591.83), Vector2(0, 13.36), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -605.105), Vector2(0, 18.145), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_nxfgp"]
resource_name = "transout"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 13), Vector2(0, -603.48)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 23.09), Vector2(0, -609.26)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pckrk"]
_data = {
"RESET": SubResource("Animation_vxdxl"),
"transin": SubResource("Animation_nq5wa"),
"transout": SubResource("Animation_nxfgp")
}

[node name="shop" type="CanvasLayer"]

[node name="shopsprite" type="Sprite2D" parent="."]
position = Vector2(0, -605.105)
script = ExtResource("1_dj2th")

[node name="Panel" type="Panel" parent="shopsprite"]
z_index = 6
offset_left = 174.0
offset_top = 91.64
offset_right = 995.0
offset_bottom = 582.64

[node name="close" type="Button" parent="shopsprite/Panel"]
z_index = 6
offset_left = 668.0
offset_top = 17.84
offset_right = 716.0
offset_bottom = 48.84
scale = Vector2(2.85518, 2.29921)
text = "close"

[node name="special1" type="Button" parent="shopsprite/Panel"]
z_index = 6
offset_left = 436.0
offset_top = 210.84
offset_right = 444.0
offset_bottom = 218.84
scale = Vector2(16.8394, 15.7206)

[node name="special1" type="Sprite2D" parent="shopsprite/Panel/special1"]
modulate = Color(0.772549, 0, 0.780392, 1)
position = Vector2(4.33507, 4.51638)
scale = Vector2(0.11624, 0.126526)
texture = ExtResource("2_3v13a")
region_enabled = true
region_rect = Rect2(321, 260, 62, 60)

[node name="Label" type="Label" parent="shopsprite/Panel/special1"]
layout_mode = 0
offset_left = 3.4443
offset_top = 7.37888
offset_right = 43.4443
offset_bottom = 30.3789
scale = Vector2(0.183775, 0.105619)
text = "3"

[node name="special2" type="Button" parent="shopsprite/Panel"]
z_index = 6
offset_left = 634.0
offset_top = 215.84
offset_right = 642.0
offset_bottom = 223.84
scale = Vector2(15.8769, 14.9342)

[node name="special2" type="Sprite2D" parent="shopsprite/Panel/special2"]
modulate = Color(0, 0.921569, 0.34902, 1)
position = Vector2(4.03102, 4.21851)
scale = Vector2(0.119068, 0.122951)
texture = ExtResource("2_3v13a")
region_enabled = true
region_rect = Rect2(263, 513, 53, 62)

[node name="Label" type="Label" parent="shopsprite/Panel/special2"]
layout_mode = 0
offset_left = 3.33819
offset_top = 7.70046
offset_right = 43.3382
offset_bottom = 30.7005
scale = Vector2(0.164809, 0.10805)
text = "3"

[node name="fire" type="Button" parent="shopsprite/Panel"]
z_index = 6
offset_left = 221.0
offset_top = 221.84
offset_right = 229.0
offset_bottom = 229.84
scale = Vector2(16.9004, 16.4916)

[node name="fire" type="Sprite2D" parent="shopsprite/Panel/fire"]
position = Vector2(4.20107, 3.75948)
rotation = 0.545698
scale = Vector2(0.104727, 0.11433)
texture = ExtResource("2_3v13a")
region_enabled = true
region_rect = Rect2(0, 0, 76, 62)

[node name="Label" type="Label" parent="shopsprite/Panel/fire"]
layout_mode = 0
offset_left = 3.31352
offset_top = 6.36686
offset_right = 43.3135
offset_bottom = 29.3669
scale = Vector2(0.216356, 0.153673)
text = "2"

[node name="bow" type="Button" parent="shopsprite/Panel"]
z_index = 6
offset_left = 68.0
offset_top = 224.84
offset_right = 76.0
offset_bottom = 232.84
scale = Vector2(14.6507, 14.5902)

[node name="bow" type="Sprite2D" parent="shopsprite/Panel/bow"]
position = Vector2(4.16361, 3.97528)
scale = Vector2(0.301746, -0.330398)
texture = ExtResource("3_6ae17")
region_enabled = true
region_rect = Rect2(0, 95, 26, 26)

[node name="Label" type="Label" parent="shopsprite/Panel/bow"]
layout_mode = 0
offset_left = 3.4128
offset_top = 7.88202
offset_right = 43.4128
offset_bottom = 30.882
scale = Vector2(0.22009, 0.136033)
text = "2"

[node name="arrow" type="Button" parent="shopsprite/Panel"]
z_index = 6
offset_left = 351.0
offset_top = 361.84
offset_right = 359.0
offset_bottom = 369.84
scale = Vector2(15.4522, 15.0248)

[node name="Sprite2D" type="Sprite2D" parent="shopsprite/Panel/arrow"]
position = Vector2(3.7535, 3.92684)
scale = Vector2(0.184418, 0.212183)
texture = ExtResource("4_00j1l")
region_enabled = true
region_rect = Rect2(205, 70, 57, 50)

[node name="Label" type="Label" parent="shopsprite/Panel/arrow"]
layout_mode = 0
offset_left = 3.49464
offset_top = 5.59076
offset_right = 43.4946
offset_bottom = 28.5908
scale = Vector2(0.138412, 0.120995)
text = "1"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../shopsprite/Panel")
libraries = {
"": SubResource("AnimationLibrary_pckrk")
}

[connection signal="pressed" from="shopsprite/Panel/close" to="shopsprite" method="_on_close_pressed"]
[connection signal="pressed" from="shopsprite/Panel/special1" to="shopsprite" method="_on_special_1_pressed"]
[connection signal="pressed" from="shopsprite/Panel/special2" to="shopsprite" method="_on_special_2_pressed"]
[connection signal="pressed" from="shopsprite/Panel/fire" to="shopsprite" method="_on_fire_pressed"]
[connection signal="pressed" from="shopsprite/Panel/bow" to="shopsprite" method="_on_bow_pressed"]
[connection signal="pressed" from="shopsprite/Panel/arrow" to="shopsprite" method="_on_arrow_pressed"]
